--- a/src/app/features/login/views/login.component.html
+++ b/src/app/features/login/views/login.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container my-5" id="container">
+<div class="container my-5" id="container">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()">
     <div class="row justify-content-center text-left p-4">
       <div class="col-xl-5 col-lg-5 col-md-10 col-sm-10 p-5 bg-color">
@@ -16,7 +16,7 @@
               loginForm.controls['email'].valid === false &&
               loginForm.controls['email'].touched
             "
-            class="alert-error"
+            class="alert-error alert-label"
           >
             Por favor ingrese un email correcto.
           </div>
@@ -33,7 +33,7 @@
               loginForm.controls['password'].valid === false &&
               loginForm.controls['password'].touched
             "
-            class="alert-error"
+            class="alert-error alert-label"
           >
             Por favor ingresa tu contraseña correcta.
           </div>
@@ -50,11 +50,9 @@
       </div>
     </div>
   </form>
-</div> -->
-
-<!-- mi perfil -->
-
-<!-- <div class="container">
+</div>
+<!-- 
+<div class="container">
   <div class="mt-5 text-center">
     <h5 class="title">Mi Perfil:</h5>
     <p>Completa o edita la información que quieres publicar.</p>
@@ -90,9 +88,8 @@
       <button class="button">ACTUALIZAR</button>
     </div>
   </div>
-</div> -->
+</div>
 
-<!-- Formulario registro -->
 <div class="container">
   <div class="mt-5 text-center">
     <h5 class="title">Registro Profesional</h5>
@@ -431,4 +428,4 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
