--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -35,7 +35,10 @@
           <a routerLink="contact" class="nav-link">Contacto</a>
         </li>
       </ul>
-      <a routerLink="/register">
+      <a
+        href="https://docs.google.com/forms/d/1U6iNSLtkxyZh1D3KrC-Z3r1G-LoCuZ0AFArfn9EuWcI/edit#response=ACYDBNi5uT_wGXp2Wf7G3bjNPkS8K1wt0jACOy4ub5zfcLREhnSZW5ZYV5Koolk-K_mQKfk "
+        target="_blank"
+      >
         <button class="m-lg-3 mb-sm-3 text-nowrap" id="register">
           Regístrate <fa-icon [icon]="regIcon"></fa-icon>
         </button>
